--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+django = "^5.1"
+psycopg2-binary = "^2.9.9"
+pillow = "^10.4.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
