--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.1"
 psycopg2-binary = "^2.9.9"
 pillow = "^10.4.0"
 python-dotenv = "^1.0.1"
+djangorestframework = "^3.15.2"
+redis = "^5.0.8"
 
 
 [build-system]
